[package]
name = "mini_leo"
version = "0.1.0"
build = "build.rs"
edition = "2018"

[lib]
name = "mini_leo"
crate-type = ["cdylib"]

[build-dependencies]
cbindgen = "0.19.0"

[dependencies]
lazy_static = "1.4.0"
quick-xml = "0.22.0"
# zip = "0.5.13"

[dependencies.pyo3]
version = "0.14.1"
features = ["extension-module", "abi3"]

[dev-dependencies]
proptest = "1.0.0"
